force-app/main/default/objects/pse__Task_Management_Settings__c/fields/pse__Auto_Create_Task_Assignment__c.field-meta.xml
<CustomField>
    <fullName>pse__Auto_Create_Task_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether to automatically assign unassigned project tasks that belong to the same milestone as the assignment when assigning a resource to a project or creating a new assignment milestone record. The default value is false.</inlineHelpText>
    <label>Automatically Create Task Assignments</label>
    <type>Checkbox</type>
</CustomField>