force-app/main/default/objects/pse__Task_Management_Settings__c/fields/pse__Default_Task_Ordering__c.field-meta.xml
<CustomField>
    <fullName>pse__Default_Task_Ordering__c</fullName>
    <defaultValue>&quot;Start_Date_Time__c ASC NULLS LAST, CreatedDate ASC&quot;</defaultValue>
    <description>Controls the default ordering of tasks on the task management interface on initial load and after refreshing. This must be valid after a SOQL ORDER BY clause.</description>
    <inlineHelpText>Controls the default ordering of tasks on the task management interface on initial load and after refreshing. This must be valid after a SOQL ORDER BY clause.</inlineHelpText>
    <label>Default Task Ordering</label>
    <type>TextArea</type>
</CustomField>