force-app/main/default/objects/pse__Task_Management_Settings__c/fields/pse__Restrict_Edit_PTA_Dates__c.field-meta.xml
<CustomField>
    <fullName>pse__Restrict_Edit_PTA_Dates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, restricts you from saving changes to the Task End Date when it is out-of-range of the Project Task Assignment dates.</description>
    <inlineHelpText>If selected, restricts you from saving changes to the Task End Date when it is out-of-range of the Project Task Assignment dates.</inlineHelpText>
    <label>Restrict Edit - PTA - Dates</label>
    <type>Checkbox</type>
</CustomField>