force-app/main/default/objects/pse__Task_Management_Settings__c/fields/pse__Restrict_Edit_Start_Date_Project__c.field-meta.xml
<CustomField>
    <fullName>pse__Restrict_Edit_Start_Date_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, restricts you from saving changes to the Task Start Date when it is out-of-range of the Project Start and End dates.</description>
    <inlineHelpText>If selected, restricts you from saving changes to the Task Start Date when it is out-of-range of the Project Start and End dates.</inlineHelpText>
    <label>Restrict Edit - Start Date - Project</label>
    <type>Checkbox</type>
</CustomField>