force-app/main/default/objects/pse__Task_Management_Settings__c/fields/pse__Track_Points_History_Disabled__c.field-meta.xml
<CustomField>
    <fullName>pse__Track_Points_History_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Track Points History Disabled</label>
    <type>Checkbox</type>
</CustomField>